--- a/helloworld-secrets-volumes.yml
+++ b/helloworld-secrets-volumes.yml
@@ -15,3 +15,11 @@ spec:
         ports:
         - name: nodejs-port
           containerPort: 3000
+        volumeMounts:
+        - name: cred-volume
+          mountPath: /etc/creds
+          readOnly: true
+      volumes:
+      - name: cred-volume
+        secret: 
+          secretName: db-secrets
